--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -34,21 +34,26 @@
   background-color: transparent; // Hide the default background color on elements like <button>
 }
 
+//
+// Removes an item from the page, without affecting page flow or causing scrollbars.
+// This is a good method for accessibilty.
+//
+@mixin offScreen() {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
 
 //
 // element-invisible improved and more robust
 //
 @mixin element-invisible {
-  border: 0;
-  height: 1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
-    clip: rect(1px 1px 1px 1px); // IE6 and IE7 use the wrong syntax
-  }
-  clip: rect(1px, 1px, 1px, 1px);
+  clip: auto;
+  height: auto;
+  overflow: auto;
+
+  @include offScreen;
 }
 
 
